bin_data_macros/tests/ui/superfluous-endian.stderr
error[E0308]: mismatched types
 --> tests/ui/superfluous-endian.rs:6:29
  |
6 |         #[bin_data(endian = "little")]
  |                             ^^^^^^^^ expected struct `NoEndian`, found enum `Endian`
7 |         cannot_be_little: (),
  |         ---------------- arguments to this function are incorrect
  |
note: associated function defined here
 --> $WORKSPACE/bin_data/src/data.rs
  |
  |     fn decode_with<R: Read + ?Sized>(reader: &mut R, endian: Self::EndianContext, args: Args) -> Result<Self, DecodeError>;
  |        ^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/superfluous-endian.rs:8:29
  |
8 |         #[bin_data(endian = "big")]
  |                             ^^^^^ expected struct `NoEndian`, found enum `Endian`
9 |         cannot_be_big: (),
  |         ------------- arguments to this function are incorrect
  |
note: associated function defined here
 --> $WORKSPACE/bin_data/src/data.rs
  |
  |     fn decode_with<R: Read + ?Sized>(reader: &mut R, endian: Self::EndianContext, args: Args) -> Result<Self, DecodeError>;
  |        ^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/superfluous-endian.rs:10:29
   |
10 |         #[bin_data(endian = "inherit")]
   |                             ^^^^^^^^^ expected struct `NoEndian`, found enum `Endian`
11 |         cannot_inherit: (),
   |         -------------- arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/bin_data/src/data.rs
   |
   |     fn decode_with<R: Read + ?Sized>(reader: &mut R, endian: Self::EndianContext, args: Args) -> Result<Self, DecodeError>;
   |        ^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/superfluous-endian.rs:6:29
  |
6 |         #[bin_data(endian = "little")]
  |                             ^^^^^^^^ expected struct `NoEndian`, found enum `Endian`
7 |         cannot_be_little: (),
  |         ---------------- arguments to this method are incorrect
  |
note: associated function defined here
 --> $WORKSPACE/bin_data/src/data.rs
  |
  |     fn encode_with<W: Write + ?Sized>(&self, writer: &mut W, endian: Self::EndianContext, args: Args) -> Result<(), EncodeError>;
  |        ^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/superfluous-endian.rs:8:29
  |
8 |         #[bin_data(endian = "big")]
  |                             ^^^^^ expected struct `NoEndian`, found enum `Endian`
9 |         cannot_be_big: (),
  |         ------------- arguments to this method are incorrect
  |
note: associated function defined here
 --> $WORKSPACE/bin_data/src/data.rs
  |
  |     fn encode_with<W: Write + ?Sized>(&self, writer: &mut W, endian: Self::EndianContext, args: Args) -> Result<(), EncodeError>;
  |        ^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/superfluous-endian.rs:10:29
   |
10 |         #[bin_data(endian = "inherit")]
   |                             ^^^^^^^^^ expected struct `NoEndian`, found enum `Endian`
11 |         cannot_inherit: (),
   |         -------------- arguments to this method are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/bin_data/src/data.rs
   |
   |     fn encode_with<W: Write + ?Sized>(&self, writer: &mut W, endian: Self::EndianContext, args: Args) -> Result<(), EncodeError>;
   |        ^^^^^^^^^^^
